force-app/main/default/objects/MicrosoftAzure_ClientCredentials__mdt/MicrosoftAzure_ClientCredentials__mdt.object-meta.xml
<CustomObject>
    <label>Microsoft Azure Client Credentials</label>
    <pluralLabel>Microsoft Azure Client Credentials</pluralLabel>
</CustomObject>