force-app/main/default/objects/MicrosoftAzure_ClientCredentials__mdt/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <label>Callback URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>