force-app/main/default/objects/MicrosoftAzure_ClientCredentials__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <defaultValue>&quot;https://graph.microsoft.com/.default&quot;</defaultValue>
    <label>Scopes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>