force-app/main/default/objects/MicrosoftAzure_ClientCredentials__mdt/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <label>Tenant ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>